2019-01-25  Russell Harrison  <rharrison@fedoraproject.org> - 1.0.0
  * Updates to bring the module in line with Puppet 5+ standards
  * Configure mongodump provider and backup sets
  * Update Augeas lens to work with Puppetlabs omnibus package and Holland log
    format setting

2014-08-19  Russell Harrison  <rharrison@fedoraproject.org> - 0.0.6
  * Play nice with the puppetlabs-mysql module

2014-06-09  Russell Harrison  <rharrison@fedoraproject.org> - 0.0.5
  * As of version 1.0.0-5 of the Red Hat rpm test lenses are no longer
  included in augeas-libs so I'm going to comment out including it for now.

2013-05-30  Russell Harrison  <rharrison@fedoraproject.org> - 0.0.4
  * Specify which files to load and lenes to use for augeas types for major
  performance improvements

2013-05-14  Russell Harrison  <rharrison@fedoraproject.org> - 0.0.3
  * Move to absolute qualification of variables and classes to avoid
  https://projects.puppetlabs.com/issues/17335

2013-01-24  Russell Harrison  <rharrison@fedoraproject.org> - 0.0.2
  * Fix incorrect variable in the mysqldump backupset template
  * Include licence documentation