@@ -6,6 +6,9 @@ describe 'holland' do
       let(:facts) { os_facts }
 
       it { is_expected.to compile }
+      it { is_expected.to contain_class('holland::install') }
+      it { is_expected.to contain_class('holland::config') }
+
     end
   end
 end
