@@ -7,6 +7,13 @@ describe 'holland::mongodump::config' do
       let(:pre_condition) { 'include ::holland::mongodump' }
 
       it { is_expected.to compile }
+      it {
+        is_expected.to contain_file('/etc/holland/providers/mongodump.conf')
+          .with_ensure('file')
+          .with_owner('root')
+          .with_group('root')
+          .with_mode('0640')
+      }
     end
   end
 end
