@@ -7,6 +7,8 @@ describe 'holland::mongodump' do
       let(:pre_condition) { 'include ::holland' }
 
       it { is_expected.to compile }
+      it { is_expected.to contain_class('holland::mongodump::install') }
+      it { is_expected.to contain_class('holland::mongodump::config') }
     end
   end
 end
