@@ -1,3 +1,12 @@
+2019-08-26  Russell Harrison  <rharrison@fedoraproject.org> - 1.1.0
+  * Update to the latest Puppet PDK
+  * Enable resource coverage reports
+  * Start unit testing resources
+
+2019-08-09  Brian Wolford <bw@patientpay.com> - 1.1.0
+  * Add support for after-backup-command, before-backup-command and
+    failed-backup-command
+
 2019-01-25  Russell Harrison  <rharrison@fedoraproject.org> - 1.0.0
   * Updates to bring the module in line with Puppet 5+ standards
   * Configure mongodump provider and backup sets
